--- a/resources/applicationRentCar.properties
+++ b/resources/applicationRentCar.properties
@@ -2,3 +2,4 @@ db.url=jdbc:postgresql://localhost:5432/rental_car
 db.username=postgres
 db.password=postgres
 db.pool.size=5
+image.base.url = /home/jane/DMDev_HW/images
